Fixed the text line-wrapping upon resizing the screen

--- a/src/Components/Home/HowToOrder/HowToOrder.css
+++ b/src/Components/Home/HowToOrder/HowToOrder.css
@@ -1,6 +1,6 @@
 .HowToOrder {
     background-color: #f5f5f5;
-    height: 350px;
+    height: 290px;
     padding: 1.5%;
     text-align: center;
     justify-content: center;
@@ -24,7 +24,6 @@
 
 .step {
     font-size: 20px;
-    display: flexbox;
     justify-content: center;
     margin-left: 5%;
     margin-right: 5%;
@@ -43,7 +42,7 @@
 }
 
 .arrow {
-    margin-top: 400%;
+    margin-top: 100px;
     border: solid red;
     border-width: 0 5px 5px 0;
     display: inline-block;
@@ -51,11 +50,14 @@
     transform: rotate(-45deg);
     -webkit-transform: rotate(-45deg);
 }
-  
+ 
+.HowToOrder h2 {
+    white-space: nowrap;
+}
 
 .step .button {
+    margin-top: 5000px;
     white-space: nowrap;
-    display: inline;
     font-size: 200%;
     padding: 1% 3%;
 }
